# text_classification

./: POC webscrapping LinkedIn.ipynb  README.md  pyproject.toml
Notebooks/: fine_tunning.ipynb  text_classification.ipynb
tasks/: test_fifth.py  test_fourth.py  test_one.py  test_second.py  test_three.py
