[tool.poetry]
name = "cv-recommendations"
version = "0.1.0"
description = ""
authors = ["Andres Jimenez: <andrescover.99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pytest = "^8.3.4"
pandas = "^2.2.3"
numpy = "<2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
