[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["Jonny"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
transformers = "^4.46.2"
pandas = "^2.2.3"
numpy = "^1.1.3"
torch = "2.2.2"
accelerate = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
